--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript">
       (function(l) {
@@ -18,6 +18,7 @@
       }(window.location))
     </script>
     <title>District Eleven</title>
+    <meta name="description" content="Late night. Asian-fusion. Snack bar.">
   </head>
   <body>
     <div id="root"></div>
