--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="-mwMCtmWt-mr7arke0hkTRQRqg5mBqXmjJYBDeyOUWM" />
     <script type="text/javascript">
       (function(l) {
         if (l.search[1] === '/' ) {
